PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/ReturnWithoutStackVar.par
ReturnWithoutStackVar {
seq add(Int input) : [Int] {
    var [Int] res = [0,0,0]
    return res
}
seq main() : Void {
    add(1)
    return 0
}
}